Sat Oct 16 20:11:15 BST 2004 (njh)
----------------------------------
  * libclamav/mbox.c:	Rudimentary handling of BeMail (BeOS) messages.
				Documentation of the format would be appreciated

Sat Oct 16 18:24:33 BST 2004 (njh)
----------------------------------
  * libclamav/mbox.c:	Handle headers such as boundary="=.J:gysAG)N(3_zv"
				where the colon must not be treated as a
				token separator, reported by Christoph

Sat Oct 16 17:10:06 BST 2004 (njh)
----------------------------------
  * libclamav/untar.c:	Handle empty files in the middle of archives, reported
				by René Bellora <rbellora@tecnoaccion.com.ar>

Sat Oct 16 14:55:03 BST 2004 (njh)
----------------------------------
  * libclamav/message.c:	Handle some broken email headers:
		Content-Transfer-Encoding: 8 bit
		Content-Type: plain/text

Sat Oct 16 10:02:32 BST 2004 (njh)
----------------------------------
  * libclamav/mbox.c:	Improved handling for wraparound headers

Sat Oct 16 02:41:17 CEST 2004 (tk)
----------------------------------
  * clamdscan: add missing support for --no-summary (problem reported by
	       Matt Leyda <mfleyda*e-one.com>)

Sat Oct 16 01:01:49 CEST 2004 (tk)
----------------------------------
  * libclamav/matcher-bm.c: speed up

Fri Oct 15 22:56:23 CEST 2004 (tk)
----------------------------------
  * libclamav/readdb.c: allow (optional) engine version requirement in sigs

Fri Oct 15 02:23:02 CEST 2004 (tk)
----------------------------------
  * libclamav/special.c: return 1 for other JPEG exploit variants

Fri Oct 15 01:53:42 CEST 2004 (tk)
----------------------------------
  * libclamav/scanners.c: do not return CL_EFORMAT to callers

Thu Oct 14 22:19:20 BST 2004 (njh)
----------------------------------
  * libclamav/mbox.c:	Harden the test for RFC2047 encoded headers

Thu Oct 14 18:46:10 BST 2004 (njh)
----------------------------------
  * libclamav:		Handle RFC2047 on long lines produced by continuation
				headers